log
Thu 16 May 2024 09:37:14 PM UTC: 
 tests:  0|5
total_score: 0/70
dcb5b5f
Thu 16 May 2024 09:49:53 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6014a38
Thu 16 May 2024 09:51:21 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:17: error: unused variable ‘nuevo_estado’ [-Werror=unused-variable]
   61 |           Node *nuevo_estado = copy(n);
      |                 ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
24e29f5
Thu 16 May 2024 09:53:34 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
4e50cab
Thu 16 May 2024 09:55:05 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ab85e6d
Thu 16 May 2024 09:55:37 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
1bf12b6
